src/objects/Request__c.object
<CustomObject>
    <fields>
        <fullName>Access_Method__c</fullName>
        <label>Access Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                    <color>#0B6FCE</color>
                    <label>Internal</label>
                </value>
                <value>
                    <fullName>External</fullName>
                    <color>#78C953</color>
                    <label>External</label>
                </value>
                <value>
                    <fullName>No Longer Accessible</fullName>
                    <color>#E27001</color>
                    <label>No Longer Accessible</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Criticality_Comments__c</fullName>
        <label>Business Criticality Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Primary__c</fullName>
        <inlineHelpText>Business unit that is funding the activity or research study</inlineHelpText>
        <label>Business Unit (Primary)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Animal Health</fullName>
                </value>
                <value>
                    <fullName>Biotech</fullName>
                </value>
                <value>
                    <fullName>Consumer Health</fullName>
                </value>
                <value>
                    <fullName>Generics</fullName>
                </value>
                <value>
                    <fullName>Medical Devices</fullName>
                </value>
                <value>
                    <fullName>Pharmaceuticals</fullName>
                </value>
                <value>
                    <fullName>Vaccines</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deprioritized</fullName>
                </value>
                <value>
                    <fullName>Discontinued</fullName>
                </value>
                <value>
                    <fullName>Outsourcing Services</fullName>
                </value>
                <value>
                    <fullName>Scope change/no services needed</fullName>
                </value>
                <value>
                    <fullName>Molecule development cancelled</fullName>
                </value>
                <value>
                    <fullName>Other - please provide a description in Chatter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consultant_Resource_Effort__c</fullName>
        <label>Consultation Effort</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brief (conversations w/o draft review)</fullName>
                </value>
                <value>
                    <fullName>Short Term (1-3 meetings including draft review)</fullName>
                </value>
                <value>
                    <fullName>Long Term (&gt;3 meetings including draft review)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contracting_Phase_Start_Date__c</fullName>
        <label>Contracting Phase Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Accepted__c</fullName>
        <label>Date Accepted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Cancelled__c</fullName>
        <label>Date Cancelled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <label>Date Archived</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_In_Progress__c</fullName>
        <label>Date In Progress</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Request description and relevant information</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Differentiating_Attributes_of_this_data__c</fullName>
        <label>Differentiating Attributes of this data</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exploration_Phase_Start_Date__c</fullName>
        <label>Exploration Phase Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Outcome__c</fullName>
        <inlineHelpText>Summary of request output</inlineHelpText>
        <label>Final Outcome</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Governance_Phase_Start_Date__c</fullName>
        <label>Governance Phase Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Key_Considerations__c</fullName>
        <label>Key Considerations</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Launch_Phase_Start_Date__c</fullName>
        <label>Launch Phase Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outcome_TF__c</fullName>
        <label>Outcome_TF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Organization Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>DRDP_Partners</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partnership_Exploration_Initiator__c</fullName>
        <label>Initiator for Partnership Exploration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Potential Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partnership_Sponsor__c</fullName>
        <label>Partnership Sponsor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Federal Funding</fullName>
                </value>
                <value>
                    <fullName>Industry Funding</fullName>
                </value>
                <value>
                    <fullName>Joint Ventury (Industry)</fullName>
                </value>
                <value>
                    <fullName>Joint Ventury (Academia)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partnership_Status__c</fullName>
        <label>Partnership Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Evaluated and Not Pursued</fullName>
                </value>
                <value>
                    <fullName>Exploring</fullName>
                </value>
                <value>
                    <fullName>Approved and Active</fullName>
                </value>
                <value>
                    <fullName>Approved and Pursuing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pending_Inc_Action_Date__c</fullName>
        <description>Trigger updates this field when Request Stage = Pending</description>
        <inlineHelpText>Trigger updates this field when Request Stage = Pending</inlineHelpText>
        <label>Pending Inc Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RWE_Requests3_DF</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Business Criticality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High (&lt;1 week)</fullName>
                </value>
                <value>
                    <fullName>Medium (&lt;1 month)</fullName>
                </value>
                <value>
                    <fullName>Low (&lt;2 months)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_Due_Date__c</fullName>
        <inlineHelpText>Suggested completion date of request or response</inlineHelpText>
        <label>Proposed Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_Partnership_Not_Pursued__c</fullName>
        <label>Reason Partnership Not Pursued</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <inlineHelpText>Geographic region that the research study or data source represents.</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asia Pacific</fullName>
                    <color>#0B6FCE</color>
                    <label>Asia Pacific</label>
                </value>
                <value>
                    <fullName>Emerging Markets</fullName>
                    <color>#78C953</color>
                    <label>Emerging Markets</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <color>#E27001</color>
                    <label>EMEA</label>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                    <color>#A845DC</color>
                    <label>Latin America</label>
                </value>
                <value>
                    <fullName>Global (Multiple Regions)</fullName>
                    <color>#F3D904</color>
                    <label>Global (Multiple Regions)</label>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Project_TF__c</fullName>
        <label>Related_Project_TF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Research question</inlineHelpText>
        <label>Related Study</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>RWE_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Duration__c</fullName>
        <formula>DATETIMEVALUE(Date_Completed__c ) - CreatedDate</formula>
        <label>Request Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_ID__c</fullName>
        <displayFormat>REQ-{000000000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Request_Indicator__c</fullName>
        <formula>IF(AND(CONTAINS(&quot;Internal_Real_World_Data_Access:EXPERT_Exception:EXPERT_Workstream:PFO_Review_Request:Asset_Assessment_Request:RWE_Partnership_Exploration:Real_World_Analytics_Assessment&quot;,RecordType.DeveloperName)),&quot;&quot;,IF(AND(CONTAINS(&quot;Complete:	Accepted:Archived:Cancelled:Deleted&quot;,TEXT(Request_Status__c))),&quot;&quot;,IF(AND(ISNULL(Proposed_Due_Date__c),AND(TEXT(Request_Status__c)==&apos;New&apos;,(TODAY() - Date_Submitted__c) &lt; 3 )),IMAGE(&quot;/resource/R3Style/assets/img/green_indicator.png&quot;,&quot;Green&quot;,15,15),IF(AND(ISNULL(Proposed_Due_Date__c),AND(TEXT(Request_Status__c)==&apos;New&apos;,(TODAY() - Date_Submitted__c) &lt; 6)),IMAGE(&quot;/resource/R3Style/assets/img/yellow_indicator.png&quot;,&quot;Yellow&quot;,15,15),IF(AND(ISNULL(Proposed_Due_Date__c),AND(TEXT(Request_Status__c)==&apos;New&apos;,(TODAY() - Date_Submitted__c) &gt; 5)),IMAGE(&quot;/resource/R3Style/assets/img/red_indicator.png&quot;,&quot;Red&quot;,15,15),IF(OR(AND(NOT ISNULL(Proposed_Due_Date__c),Proposed_Due_Date__c &gt;= TODAY()),AND(TEXT(Request_Status__c)==&apos;In Progress&apos;,Proposed_Due_Date__c &gt;= TODAY())),IMAGE(&quot;/resource/R3Style/assets/img/green_indicator.png&quot;,&quot;Green&quot;,15,15),IF(OR(AND(NOT ISNULL(Proposed_Due_Date__c),(TODAY() - Proposed_Due_Date__c) &lt; 8),AND(TEXT(Request_Status__c)==&apos;In Progress&apos;,(TODAY() - Proposed_Due_Date__c) &lt; 8)),IMAGE(&quot;/resource/R3Style/assets/img/yellow_indicator.png&quot;,&quot;Yellow&quot;,15,15),IF(OR(AND(NOT ISNULL(Proposed_Due_Date__c),(TODAY() - Proposed_Due_Date__c) &gt; 7),AND(TEXT(Request_Status__c)==&apos;In Progress&apos;,(TODAY() - Proposed_Due_Date__c) &gt; 7)),IMAGE(&quot;/resource/R3Style/assets/img/red_indicator.png&quot;,&quot;Red&quot;,15,15),&quot;&quot;))))))))</formula>
        <label>Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Selector__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Request Selector checkbox for Custom Partnership Compare Report</description>
        <inlineHelpText>Request Selector checkbox for Custom Partnership Compare Report</inlineHelpText>
        <label>Request Selector</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <inlineHelpText>The status of the request</inlineHelpText>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <color>#0B6FCE</color>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                    <color>#78C953</color>
                    <label>Accepted</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <color>#E27001</color>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <color>#A845DC</color>
                    <label>Completed</label>
                </value>
                <value>
                    <fullName>Archived</fullName>
                    <color>#F3D904</color>
                    <label>Archived</label>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                    <color>#A53711</color>
                    <label>Cancelled</label>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                    <color>#66E9BD</color>
                    <label>Deleted</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Sub_Status__c</fullName>
        <description>Controlled by Request Status. And Picklist Values are specific to Record Types also.</description>
        <inlineHelpText>Additional status of Request</inlineHelpText>
        <label>Request Stage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Request_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                    <color>#F3D904</color>
                    <label>Submitted</label>
                </value>
                <value>
                    <fullName>Pending Requestor Action</fullName>
                    <color>#8F6429</color>
                    <label>Pending Requestor Action</label>
                </value>
                <value>
                    <fullName>Pending Action</fullName>
                    <color>#EFAE73</color>
                    <label>Pending Action</label>
                </value>
                <value>
                    <fullName>Exploration</fullName>
                    <color>#0B6FCE</color>
                    <label>Exploration</label>
                </value>
                <value>
                    <fullName>Governance</fullName>
                    <color>#78C953</color>
                    <label>Governance</label>
                </value>
                <value>
                    <fullName>Contracting</fullName>
                    <color>#E27001</color>
                    <label>Contracting</label>
                </value>
                <value>
                    <fullName>Launch</fullName>
                    <color>#A845DC</color>
                    <label>Launch</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requestor_Functional_Area__c</fullName>
        <description>This is done as we cannot look up this information on the User record</description>
        <inlineHelpText>Functional area of the requestor</inlineHelpText>
        <label>Requestor Functional Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clinical_Studies</fullName>
                </value>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>Forecasting</fullName>
                </value>
                <value>
                    <fullName>Joint Venture</fullName>
                </value>
                <value>
                    <fullName>Market Research</fullName>
                </value>
                <value>
                    <fullName>Medical Affairs</fullName>
                </value>
                <value>
                    <fullName>Pre-Clinical Studies</fullName>
                </value>
                <value>
                    <fullName>Patient Enrollment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requestor_TF__c</fullName>
        <label>Requestor_TF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Request contact</inlineHelpText>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RWE_Requests2_DF</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Requestor email notification preference (on submit)</inlineHelpText>
        <label>Send Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_to_Customer_Date__c</fullName>
        <label>Pending Addntl Info/Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Accepted_to_In_Progress__c</fullName>
        <description>Duration Request was in Status = Accepted before moving to In Progress</description>
        <formula>IF( OR(ISPICKVAL(Request_Status__c, &quot;Archived&quot;),ISPICKVAL(Request_Status__c, &quot;Cancelled&quot;),ISPICKVAL(Request_Status__c, &quot;Deleted&quot;)) ,0,IF(ISNULL(Date_In_Progress__c ), TODAY()-Date_Accepted__c  , Date_In_Progress__c - Date_Accepted__c ))</formula>
        <inlineHelpText>Duration Request was in Status = Accepted before moving to In Progress</inlineHelpText>
        <label>Status: Accepted to In Progress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Archived_to_Cancelled__c</fullName>
        <description>Duration Request was in Status = New(Submitted) before moving to In Progress</description>
        <formula>IF( OR(ISPICKVAL(Request_Status__c, &quot;Archived&quot;),ISPICKVAL(Request_Status__c, &quot;Cancelled&quot;),ISPICKVAL(Request_Status__c, &quot;Deleted&quot;)) ,0,IF(ISNULL(Date_In_Progress__c), TODAY()-Date_Submitted__c , Date_In_Progress__c- Date_Submitted__c ))</formula>
        <inlineHelpText>Duration Request was in Status = New(Submitted) before moving to In Progress</inlineHelpText>
        <label>Status: Archived to Cancelled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Completed_to_Archived__c</fullName>
        <description>Duration Request was in Status = Accepted before moving to Complete</description>
        <formula>IF( OR(ISPICKVAL(Request_Status__c, &quot;Archived&quot;),ISPICKVAL(Request_Status__c, &quot;Cancelled&quot;),ISPICKVAL(Request_Status__c, &quot;Deleted&quot;)) ,0,IF(ISNULL(Date_Completed__c), TODAY()-Date_Accepted__c , Date_Completed__c- Date_Accepted__c  ) )</formula>
        <inlineHelpText>Duration Request was in Status = Accepted before moving to Complete</inlineHelpText>
        <label>Status: Completed to Archived</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Contracting_to_Launch__c</fullName>
        <description>Duration Request was in Stage = Contracting before moving to Launch</description>
        <formula>IF(ISNULL(Launch_Phase_Start_Date__c ), TODAY()-Contracting_Phase_Start_Date__c , Launch_Phase_Start_Date__c - Contracting_Phase_Start_Date__c )</formula>
        <inlineHelpText>Duration Request was in Stage = Contracting before moving to Launch</inlineHelpText>
        <label>Stage: Contracting to Launch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Exploration_to_Governance__c</fullName>
        <description>Duration Request was in Stage = Exploration before moving to Governance</description>
        <formula>IF(ISNULL(Governance_Phase_Start_Date__c ), TODAY()-Exploration_Phase_Start_Date__c , Governance_Phase_Start_Date__c - Exploration_Phase_Start_Date__c )</formula>
        <inlineHelpText>Duration Request was in Stage = Exploration before moving to Governance</inlineHelpText>
        <label>Stage: Exploration to Governance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Governance_to_Contracting__c</fullName>
        <description>Duration Request was in Stage = Governance before moving to Contracting</description>
        <formula>IF(ISNULL(Contracting_Phase_Start_Date__c ), TODAY()-Governance_Phase_Start_Date__c , Contracting_Phase_Start_Date__c - Governance_Phase_Start_Date__c )</formula>
        <inlineHelpText>Duration Request was in Stage = Governance before moving to Contracting</inlineHelpText>
        <label>Stage: Governance to Contracting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_In_Progress_to_Complete__c</fullName>
        <description>Duration Request was in Status = In Progress before moving to Complete</description>
        <formula>IF( OR(ISPICKVAL(Request_Status__c, &quot;Archived&quot;),ISPICKVAL(Request_Status__c, &quot;Cancelled&quot;),ISPICKVAL(Request_Status__c, &quot;Deleted&quot;)) ,0,IF(ISNULL(Date_Completed__c ), TODAY()-Date_In_Progress__c , Date_Completed__c - Date_In_Progress__c ))</formula>
        <inlineHelpText>Duration Request was in Status = In Progress before moving to Complete</inlineHelpText>
        <label>Status: In Progress to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_New_to_Accepted__c</fullName>
        <description>Duration Request was in Status = New(Submitted) before moving to Accepted</description>
        <formula>IF( OR(ISPICKVAL(Request_Status__c, &quot;Archived&quot;),ISPICKVAL(Request_Status__c, &quot;Cancelled&quot;),ISPICKVAL(Request_Status__c, &quot;Deleted&quot;)) ,0,IF(ISNULL(Date_Accepted__c ), TODAY()-Date_Submitted__c , Date_Accepted__c - Date_Submitted__c ))</formula>
        <inlineHelpText>Duration Request was in Status = New(Submitted) before moving to Accepted</inlineHelpText>
        <label>Status: New to Accepted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_New_to_Complete__c</fullName>
        <description>Duration Request was in Status = New(Submitted) before moving to Complete</description>
        <formula>IF( OR(ISPICKVAL(Request_Status__c, &quot;Archived&quot;),ISPICKVAL(Request_Status__c, &quot;Cancelled&quot;),ISPICKVAL(Request_Status__c, &quot;Deleted&quot;)) ,0,IF(ISNULL(Date_Completed__c), TODAY()-Date_Submitted__c , Date_Completed__c - Date_Submitted__c ))</formula>
        <inlineHelpText>Duration Request was in Status = New(Submitted) before moving to Complete</inlineHelpText>
        <label>Status: New to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Therapeutic_Area_Primary__c</fullName>
        <description>Disease state that is involved in the research project or would be served by the data asset</description>
        <inlineHelpText>Disease state that is involved in the research study or would be served by the data asset</inlineHelpText>
        <label>Therapeutic Area (Primary)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Autoimmune Diseases</fullName>
                </value>
                <value>
                    <fullName>Cardiovascular</fullName>
                </value>
                <value>
                    <fullName>Dermatology</fullName>
                </value>
                <value>
                    <fullName>Diabetes</fullName>
                </value>
                <value>
                    <fullName>Endocrinology</fullName>
                </value>
                <value>
                    <fullName>Gastroenterology</fullName>
                </value>
                <value>
                    <fullName>Gynecology</fullName>
                </value>
                <value>
                    <fullName>Immunology</fullName>
                </value>
                <value>
                    <fullName>Neurology</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>Psychiatry &amp; Pain</fullName>
                </value>
                <value>
                    <fullName>Rheumatology</fullName>
                </value>
                <value>
                    <fullName>Urology</fullName>
                </value>
                <value>
                    <fullName>Vaccines</fullName>
                </value>
                <value>
                    <fullName>Non-Therapeutic Area Specific</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Partner__c</fullName>
        <label>Type of Partner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academic medical center</fullName>
                </value>
                <value>
                    <fullName>Consultancy firm</fullName>
                </value>
                <value>
                    <fullName>Government entity</fullName>
                </value>
                <value>
                    <fullName>Healthcare IT/Informatics</fullName>
                </value>
                <value>
                    <fullName>Integrated health system</fullName>
                </value>
                <value>
                    <fullName>Non-profit</fullName>
                </value>
                <value>
                    <fullName>Patient advocacy group</fullName>
                </value>
                <value>
                    <fullName>Payer</fullName>
                </value>
                <value>
                    <fullName>Pharma company</fullName>
                </value>
                <value>
                    <fullName>Pharmacy benefit manager</fullName>
                </value>
                <value>
                    <fullName>Professional society</fullName>
                </value>
                <value>
                    <fullName>Research network</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Contact_Information__c</fullName>
        <label>Vendor Contact Information</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>What_Makes_It_Unique__c</fullName>
        <label>What Makes It Unique</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DRDP_Deleted_Records_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Deleted Records</label>
        <queue>DRDP_Deleted_Records</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DRDP_Partnership_Exploration_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Partnership Exploration</label>
        <queue>DRDP_Partnership_Exploration</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DRDP_Research_Study_Consultation_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Research Study Consultation</label>
        <queue>DRDP_Research_Study_Consultation</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DRDP_Scientific_Technology_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Scientific Technology</label>
        <queue>DRDP_Scientific_Technology</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>QUE_Data_Sourcing_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Data Sourcing</label>
        <queue>QUE_Data_Sourcing</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>QUE_EXPERT_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>EXPERT</label>
        <queue>QUE_EXPERT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>QUE_RWA_Asmnt_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Assessment</label>
        <queue>QUE_RWA_Asmnt</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>QUE_RWD_Analysis_GPS_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Data Mart Project GPS</label>
        <queue>QUE_RWD_Analysis_GPS</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>QUE_RWD_Analysis_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Scientific Asset</label>
        <queue>QUE_RWD_Analysis</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>QUE_RWD_Operations_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Operations</label>
        <queue>QUE_RWD_Operations</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>